@@ -468,6 +468,24 @@ name|HServerInfo
 argument_list|>
 argument_list|()
 decl_stmt|;
+specifier|final
+name|Map
+argument_list|<
+name|HServerAddress
+argument_list|,
+name|HServerInfo
+argument_list|>
+name|serverAddressToServerInfo
+init|=
+operator|new
+name|ConcurrentHashMap
+argument_list|<
+name|HServerAddress
+argument_list|,
+name|HServerInfo
+argument_list|>
+argument_list|()
+decl_stmt|;
 comment|/**    * Set of known dead servers.  On znode expiration, servers are added here.    * This is needed in case of a network partitioning where the server's lease    * expires, but the server is still running. After the network is healed,    * and it's server logs are recovered, it will be told to call server startup    * because by then, its regions have probably been reassigned.    */
 specifier|protected
 specifier|final
@@ -682,6 +700,11 @@ operator|new
 name|ServerExpirer
 argument_list|(
 name|serverName
+argument_list|,
+name|info
+operator|.
+name|getServerAddress
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|zooKeeperWrapper
@@ -891,6 +914,18 @@ operator|.
 name|put
 argument_list|(
 name|serverName
+argument_list|,
+name|info
+argument_list|)
+expr_stmt|;
+name|serverAddressToServerInfo
+operator|.
+name|put
+argument_list|(
+name|info
+operator|.
+name|getServerAddress
+argument_list|()
 argument_list|,
 name|info
 argument_list|)
@@ -1306,6 +1341,11 @@ name|info
 operator|.
 name|getServerName
 argument_list|()
+argument_list|,
+name|info
+operator|.
+name|getServerAddress
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|serversToServerInfo
@@ -1365,6 +1405,11 @@ argument_list|(
 name|serverInfo
 operator|.
 name|getServerName
+argument_list|()
+argument_list|,
+name|serverInfo
+operator|.
+name|getServerAddress
 argument_list|()
 argument_list|)
 condition|)
@@ -1570,6 +1615,18 @@ throws|throws
 name|IOException
 block|{
 comment|// Refresh the info object and the load information
+name|serverAddressToServerInfo
+operator|.
+name|put
+argument_list|(
+name|serverInfo
+operator|.
+name|getServerAddress
+argument_list|()
+argument_list|,
+name|serverInfo
+argument_list|)
+expr_stmt|;
 name|serversToServerInfo
 operator|.
 name|put
@@ -2689,6 +2746,10 @@ parameter_list|(
 specifier|final
 name|String
 name|serverName
+parameter_list|,
+specifier|final
+name|HServerAddress
+name|serverAddress
 parameter_list|)
 block|{
 name|boolean
@@ -2696,6 +2757,13 @@ name|infoUpdated
 init|=
 literal|false
 decl_stmt|;
+name|serverAddressToServerInfo
+operator|.
+name|remove
+argument_list|(
+name|serverAddress
+argument_list|)
+expr_stmt|;
 name|HServerInfo
 name|info
 init|=
@@ -3012,6 +3080,32 @@ argument_list|)
 return|;
 block|}
 block|}
+specifier|public
+name|Map
+argument_list|<
+name|HServerAddress
+argument_list|,
+name|HServerInfo
+argument_list|>
+name|getServerAddressToServerInfo
+parameter_list|()
+block|{
+comment|// we use this one because all the puts to this map are parallel/synced with the other map.
+synchronized|synchronized
+init|(
+name|serversToServerInfo
+init|)
+block|{
+return|return
+name|Collections
+operator|.
+name|unmodifiableMap
+argument_list|(
+name|serverAddressToServerInfo
+argument_list|)
+return|;
+block|}
+block|}
 comment|/**    * @return Read-only map of servers to load.    */
 specifier|public
 name|Map
@@ -3134,10 +3228,17 @@ specifier|private
 name|String
 name|server
 decl_stmt|;
+specifier|private
+name|HServerAddress
+name|serverAddress
+decl_stmt|;
 name|ServerExpirer
 parameter_list|(
 name|String
 name|server
+parameter_list|,
+name|HServerAddress
+name|serverAddress
 parameter_list|)
 block|{
 name|this
@@ -3145,6 +3246,12 @@ operator|.
 name|server
 operator|=
 name|server
+expr_stmt|;
+name|this
+operator|.
+name|serverAddress
+operator|=
+name|serverAddress
 expr_stmt|;
 block|}
 specifier|public
@@ -3180,6 +3287,13 @@ literal|" znode expired"
 argument_list|)
 expr_stmt|;
 comment|// Remove the server from the known servers list and update load info
+name|serverAddressToServerInfo
+operator|.
+name|remove
+argument_list|(
+name|serverAddress
+argument_list|)
+expr_stmt|;
 name|HServerInfo
 name|info
 init|=
